--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
         <p> Reimagine your outfit experience </p>
 
-        <img src="gallery.jpg" alt="" />
-        <img src="gallery2.jpg" alt="" />
-        <img src="gallery3.jpg" alt="" />
+        <img src="./website/gallery.jpg" alt="" />
+        <img src="./website/gallery2.jpg" alt="" />
+        <img src="./website/gallery3.jpg" alt="" />
 
         <p>Coming Soon !</p>
 
