--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
 <html>
     <head>
         <Title> PefectOutfit.club </Title>
+        <style>
+            body {
+                font-family: Arial, Helvetica, sans-serif;
+            }
+        </style>
     </head>
 
-    <body style="max-width: 800px; margin: auto;">
+    <body>
+    <main style="max-width: 800px; margin: auto; padding: 10px;">
         <h1>PefectOutfit.club</h1>
 
         <p> Reimagine your outfit experience </p>
 
-        <img src="./website/gallery.jpg" alt="" />
+        <img src="./website/gallery0.jpg" alt="" />
+        <img src="./website/gallery1.jpg" alt="" />
         <img src="./website/gallery2.jpg" alt="" />
-        <img src="./website/gallery3.jpg" alt="" />
 
-        <p>Coming Soon !</p>
+        <p style="font-size: 20px; font-weight: bold">Coming Soon !</p>
+        
+        <p style=""><a href="https://devpost.com/software/perfectoutfit">See on Devpost</a></p>
 
+    </main>
     </body>
 </html>
