--- a/website/index.html
+++ b/website/index.html
@@ -16,9 +16,9 @@
 
         <p> Reimagine your outfit experience </p>
 
-        <img src="./website/gallery0.jpg" alt="" />
-        <img src="./website/gallery1.jpg" alt="" />
-        <img src="./website/gallery2.jpg" alt="" />
+        <img src="./images/gallery0.jpg" alt="" />
+        <img src="./images/gallery1.jpg" alt="" />
+        <img src="./images/gallery2.jpg" alt="" />
 
         <p style="font-size: 20px; font-weight: bold">Coming Soon !</p>
         
